--- a/OpenXmlPowerTools.Tests.64/OpenXmlPowerTools.Tests.64.csproj
+++ b/OpenXmlPowerTools.Tests.64/OpenXmlPowerTools.Tests.64.csproj
@@ -6,7 +6,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B1328B70-33B8-40E0-A729-38C34D659B5C}</ProjectGuid>
+    <ProjectGuid>{290C473F-DEB5-4E74-9AC2-D061127E91E5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>OpenXmlPowerTools.Tests</RootNamespace>
@@ -20,9 +20,10 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;X64</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -61,15 +62,31 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ChartUpdaterTests.cs" />
-    <Compile Include="DocumentAssemblerTests.cs" />
-    <Compile Include="DocumentBuilderTests.cs" />
-    <Compile Include="HtmlConverterTests.cs" />
-    <Compile Include="MetricsGetterTests.cs" />
+    <Compile Include="..\OpenXmlPowerTools.Tests\ChartUpdaterTests.cs">
+      <Link>ChartUpdaterTests.cs</Link>
+    </Compile>
+    <Compile Include="..\OpenXmlPowerTools.Tests\DocumentAssemblerTests.cs">
+      <Link>DocumentAssemblerTests.cs</Link>
+    </Compile>
+    <Compile Include="..\OpenXmlPowerTools.Tests\DocumentBuilderTests.cs">
+      <Link>DocumentBuilderTests.cs</Link>
+    </Compile>
+    <Compile Include="..\OpenXmlPowerTools.Tests\HtmlConverterTests.cs">
+      <Link>HtmlConverterTests.cs</Link>
+    </Compile>
+    <Compile Include="..\OpenXmlPowerTools.Tests\MetricsGetterTests.cs">
+      <Link>MetricsGetterTests.cs</Link>
+    </Compile>
+    <Compile Include="..\OpenXmlPowerTools.Tests\RevisionAccepterTests.cs">
+      <Link>RevisionAccepterTests.cs</Link>
+    </Compile>
+    <Compile Include="..\OpenXmlPowerTools.Tests\SpreadsheetWriterTests.cs">
+      <Link>SpreadsheetWriterTests.cs</Link>
+    </Compile>
+    <Compile Include="..\OpenXmlPowerTools.Tests\TestUtil.cs">
+      <Link>TestUtil.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RevisionAccepterTests.cs" />
-    <Compile Include="SpreadsheetWriterTests.cs" />
-    <Compile Include="TestUtil.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -78,9 +95,9 @@
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\OpenXmlPowerTools\OpenXmlPowerTools.csproj">
-      <Project>{6f957ff3-afcc-4d69-8fbc-71ae21bc45c9}</Project>
-      <Name>OpenXmlPowerTools</Name>
+    <ProjectReference Include="..\OpenXmlPowerTools.64\OpenXmlPowerTools.64.csproj">
+      <Project>{5827d0f3-24f9-4505-9b6d-90179bce47d9}</Project>
+      <Name>OpenXmlPowerTools.64</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
