--- a/OpenXmlPowerTools/OpenXmlPowerTools.csproj
+++ b/OpenXmlPowerTools/OpenXmlPowerTools.csproj
@@ -95,6 +95,9 @@
     <Compile Include="WorksheetAccessor.cs" />
     <Compile Include="XlsxTables.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="OpenXmlPowerTools.dll-Help.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
