Rename HtmlConverter to WmlToHtmlConverter, add wrapper class HtmlConverter

--- a/OpenXmlPowerTools/OpenXmlPowerTools.csproj
+++ b/OpenXmlPowerTools/OpenXmlPowerTools.csproj
@@ -70,7 +70,7 @@
     <Compile Include="HtmlToWmlCssApplier.cs" />
     <Compile Include="HtmlToWmlCssParser.cs" />
     <Compile Include="MetricsGetter.cs" />
-    <Compile Include="HtmlConverter.cs" />
+    <Compile Include="WmlToHtmlConverter.cs" />
     <Compile Include="ListItemRetriever.cs" />
     <Compile Include="MarkupSimplifier.cs" />
     <Compile Include="OpenXmlCmdlet.cs" />
