Implement and leverage UnicodeMapper
This commit implements UnicodeMapper, which maps run content to Unicode values
and Unicode strings back to run content. This enables much richer search and replace
functionality.

This commit also changes OpenXmlRegex to leverage UnicodeMapper, implements
a number of unit tests for UnicodeMapper, and enhances the OpenXmlRegex01
example to demonstrate the additional OpenXmlRegex capabilities.

Fixes #78

--- a/OpenXmlPowerTools.Tests/OpenXmlPowerTools.Tests.csproj
+++ b/OpenXmlPowerTools.Tests/OpenXmlPowerTools.Tests.csproj
@@ -76,6 +76,7 @@
     <Compile Include="SmlCellFormatterTests.cs" />
     <Compile Include="SmlToHtmlConverterTests.cs" />
     <Compile Include="SpreadsheetWriterTests.cs" />
+    <Compile Include="UnicodeMapperTests.cs" />
     <Compile Include="WmlComparerTests.cs" />
     <Compile Include="WmlContentAtomListTests.cs" />
   </ItemGroup>
