--- a/OpenXmlPowerTools/OpenXmlPowerTools.csproj
+++ b/OpenXmlPowerTools/OpenXmlPowerTools.csproj
@@ -72,6 +72,7 @@
     <Compile Include="SmlDataRetriever.cs" />
     <Compile Include="SmlToHtmlConverter.cs" />
     <Compile Include="TestUtil.cs" />
+    <Compile Include="UnicodeMapper.cs" />
     <Compile Include="WmlComparer.cs" />
     <Compile Include="WmlToHtmlConverter.cs" />
     <Compile Include="ListItemRetriever.cs" />
