--- a/OpenXmlPowerTools.Tests/OpenXmlPowerTools.Tests.csproj
+++ b/OpenXmlPowerTools.Tests/OpenXmlPowerTools.Tests.csproj
@@ -66,9 +66,11 @@
     <Compile Include="HtmlConverterTests.cs" />
     <Compile Include="HtmlToWmlConverterTests.cs" />
     <Compile Include="HtmlToWmlReadAsXElement.cs" />
+    <Compile Include="MarkupSimplifierTests.cs" />
     <Compile Include="MetricsGetterTests.cs" />
     <Compile Include="PresentationBuilderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PtOpenXmlExtensionsTests.cs" />
     <Compile Include="RevisionAccepterTests.cs" />
     <Compile Include="RevisionProcessorTests.cs" />
     <Compile Include="SmlCellFormatterTests.cs" />
