--- a/OpenXmlPowerTools.Tests/OpenXmlPowerTools.Tests.csproj
+++ b/OpenXmlPowerTools.Tests/OpenXmlPowerTools.Tests.csproj
@@ -68,6 +68,7 @@
     <Compile Include="HtmlToWmlReadAsXElement.cs" />
     <Compile Include="MarkupSimplifierTests.cs" />
     <Compile Include="MetricsGetterTests.cs" />
+    <Compile Include="OpenXmlRegexTests.cs" />
     <Compile Include="PresentationBuilderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PtOpenXmlExtensionsTests.cs" />
