--- a/OpenXmlPowerTools/OpenXmlPowerTools.csproj
+++ b/OpenXmlPowerTools/OpenXmlPowerTools.csproj
@@ -68,6 +68,9 @@
     <Compile Include="HtmlToWmlCssApplier.cs" />
     <Compile Include="HtmlToWmlCssParser.cs" />
     <Compile Include="MetricsGetter.cs" />
+    <Compile Include="StronglyTypedBlock.cs" />
+    <Compile Include="PowerToolsBlock.cs" />
+    <Compile Include="PowerToolsBlockExtensions.cs" />
     <Compile Include="RevisionProcessor.cs" />
     <Compile Include="SmlCellFormatter.cs" />
     <Compile Include="SmlDataRetriever.cs" />
