--- a/OpenXmlPowerTools.Tests/OpenXmlPowerTools.Tests.csproj
+++ b/OpenXmlPowerTools.Tests/OpenXmlPowerTools.Tests.csproj
@@ -72,6 +72,7 @@
     <Compile Include="PresentationBuilderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PowerToolsBlockTests.cs" />
+    <Compile Include="PtUtilTests.cs" />
     <Compile Include="RevisionAccepterTests.cs" />
     <Compile Include="RevisionProcessorTests.cs" />
     <Compile Include="SmlCellFormatterTests.cs" />
