--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     container:
-      image: mcr.microsoft.com/dotnet/sdk:10.0-preview
+      image: mcr.microsoft.com/dotnet/sdk:10.0
 
     steps:
       - uses: actions/checkout@v4
