--- a/OpenXmlPowerTools/OpenXmlPowerTools.csproj
+++ b/OpenXmlPowerTools/OpenXmlPowerTools.csproj
@@ -1,6 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net10.0</TargetFrameworks>
+    <!-- Suppress analyzer warnings for legacy code patterns -->
+    <NoWarn>$(NoWarn);CA1416;CA2200;CA2022</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
