--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,4 +26,4 @@ jobs:
           dotnet build OpenXmlPowerTools.Tests/OpenXmlPowerTools.Tests.csproj --no-restore --configuration Release
 
       - name: Test
-        run: dotnet test OpenXmlPowerTools.Tests/OpenXmlPowerTools.Tests.csproj --no-build --configuration Release --verbosity normal --filter "FullyQualifiedName~WmlComparer|FullyQualifiedName~FormattingChange"
+        run: dotnet test OpenXmlPowerTools.Tests/OpenXmlPowerTools.Tests.csproj --no-build --configuration Release --verbosity normal --filter "FullyQualifiedName~WmlComparer|FullyQualifiedName~FormattingChange|FullyQualifiedName~SmlComparer"
