Remove TypeScript-derived word-level tokenization from comparer.rs
- Remove WordUnit struct and Hashable impl (not in C# WmlComparer)
- Remove count_word_level_revision_groups() function
- Remove tokenize_text() function
- Remove DETAIL_THRESHOLD constant (C# uses it differently in LCS, not for word tokenization)
- Remove test_tokenize_text(), test_word_level_revision_groups(), test_image_comparison() tests
- Replace word-level revision counting with simple paragraph-level counting (1 del + 1 ins for modifications)
- Matches C# approach which uses character-level ComparisonUnitAtom, not word-level tokenization

All tests pass. Code is now more faithful to C# implementation.

--- a/redline-rs/Cargo.toml
+++ b/redline-rs/Cargo.toml
@@ -48,6 +48,9 @@ once_cell = "1.19"
 # Date/time handling
 chrono = { version = "0.4", features = ["serde"] }
 
+# UUID generation (for UNID matching C# Guid.NewGuid())
+uuid = { version = "1.10", features = ["v4"] }
+
 # Dev dependencies
 insta = { version = "1.41", features = ["json"] }
 pretty_assertions = "1.4"
