Phase 1: Implement WASM, CLI, and Benchmarks
- WASM: Enable wasm32-unknown-unknown build, fix deps (uuid/getrandom)
- CLI: Implement compare/count commands, fix error handling
- Bench: Add wml_benchmark harness with real test files
- Core: Fix compilation errors in comparer.rs and remove unused code warnings
- Deps: Update Cargo.toml for workspace-wide UUID features

--- a/redline-rs/Cargo.toml
+++ b/redline-rs/Cargo.toml
@@ -49,7 +49,7 @@ once_cell = "1.19"
 chrono = { version = "0.4", features = ["serde"] }
 
 # UUID generation (for UNID matching C# Guid.NewGuid())
-uuid = { version = "1.10", features = ["v4"] }
+uuid = { version = "1.10", features = ["v4", "js"] }
 
 # Dev dependencies
 insta = { version = "1.41", features = ["json"] }
