feat(sml): implement signatures module with 100% C# parity
- Implement WorkbookSignature, WorksheetSignature, CellSignature structures
- Implement CellFormatSignature with comprehensive formatting properties
- Add Phase 3 signature types: CommentSignature, DataValidationSignature, HyperlinkSignature
- All hash computations use SHA256 for consistency with C#
- Export CellFormatSignature as public (used in SmlChange), rest as pub(crate)
- Include comprehensive unit tests for all signature types
- Fix base64 deprecation warnings by using new engine API
- No compilation errors or warnings

Task: Open-Xml-PowerTools-ig4.2

--- a/redline-rs/crates/redline-core/Cargo.toml
+++ b/redline-rs/crates/redline-core/Cargo.toml
@@ -43,6 +43,7 @@ chrono = { workspace = true }
 
 # UUID generation
 uuid = { workspace = true }
+base64 = "0.22.1"
 
 [dev-dependencies]
 insta = { workspace = true }
