chore(redline-core): update dependencies and add XML namespace constants
- Add new dependencies in Cargo.toml
- Add additional OOXML namespace constants for broader format support

--- a/redline-rs/crates/redline-core/Cargo.toml
+++ b/redline-rs/crates/redline-core/Cargo.toml
@@ -62,3 +62,19 @@ trace = []
 [[bench]]
 name = "wml_benchmark"
 harness = false
+
+[[bench]]
+name = "comparison_bench"
+harness = false
+
+[[bench]]
+name = "profile_wml"
+harness = false
+
+[[bench]]
+name = "profile_pml"
+harness = false
+
+[[bench]]
+name = "profile_sml"
+harness = false
