--- a/redline-rs/crates/redline-wasm/Cargo.toml
+++ b/redline-rs/crates/redline-wasm/Cargo.toml
@@ -16,6 +16,7 @@ serde-wasm-bindgen = "0.6"
 console_error_panic_hook = "0.1"
 serde = { workspace = true }
 serde_json = { workspace = true }
+serde_bytes = "0.11.19"
 
 [dependencies.web-sys]
 version = "0.3"
